{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 43,
  "lineage": "ef192890-1e15-d790-6ffc-97a591a85c4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000465fe314d1280f",
            "association_id": "eipassoc-0b892166517bdf22e",
            "domain": "vpc",
            "id": "eipalloc-000465fe314d1280f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06c70454fe51c66e5",
            "private_dns": "ip-10-0-10-91.ec2.internal",
            "private_ip": "10.0.10.91",
            "public_dns": "ec2-34-237-207-150.compute-1.amazonaws.com",
            "public_ip": "34.237.207.150",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006837851637:internet-gateway/igw-0d96b59270b614053",
            "id": "igw-0d96b59270b614053",
            "owner_id": "006837851637",
            "tags": {
              "Name": "igw-seung-test"
            },
            "tags_all": {
              "Name": "igw-seung-test"
            },
            "vpc_id": "vpc-0bbeea5eeb66c3665"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000465fe314d1280f",
            "connectivity_type": "public",
            "id": "nat-0e6645932840bbdc3",
            "network_interface_id": "eni-06c70454fe51c66e5",
            "private_ip": "10.0.10.91",
            "public_ip": "34.237.207.150",
            "subnet_id": "subnet-02b3e877210fbc563",
            "tags": {
              "Name": "NAT-GW0-seung-test"
            },
            "tags_all": {
              "Name": "NAT-GW0-seung-test"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006837851637:route-table/rtb-082975416cb63023d",
            "id": "rtb-082975416cb63023d",
            "owner_id": "006837851637",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private0rt-seung-test",
              "Network": "Private"
            },
            "tags_all": {
              "Name": "private0rt-seung-test",
              "Network": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbeea5eeb66c3665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006837851637:route-table/rtb-005841f2443d9d9c7",
            "id": "rtb-005841f2443d9d9c7",
            "owner_id": "006837851637",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "publicrt-seung-test"
            },
            "tags_all": {
              "Name": "publicrt-seung-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbeea5eeb66c3665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006837851637:subnet/subnet-02b3e877210fbc563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b3e877210fbc563",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "006837851637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public0-seung-test"
            },
            "tags_all": {
              "Name": "public0-seung-test"
            },
            "vpc_id": "vpc-0bbeea5eeb66c3665"
          },
          "dependencies": [
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:006837851637:vpc/vpc-0bbeea5eeb66c3665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a52f0cda0e48bc70",
            "default_route_table_id": "rtb-05825ab2aaa400e05",
            "default_security_group_id": "sg-01692f0fd9932bd10",
            "dhcp_options_id": "dopt-0684827d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bbeea5eeb66c3665",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05825ab2aaa400e05",
            "owner_id": "006837851637",
            "tags": {
              "Name": "vpc-seung-test"
            },
            "tags_all": {
              "Name": "vpc-seung-test"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}